[package]
name = "hyperlink-one-time-pad"
version = "0.1.0"
authors = ["772"]
license-file = "LICENSE"
description = "CLI tool that doesn't require you to save huge files for one-time-pad encryptions by using hyperlinks."
repository = "https://github.com/772/hyperlink-one-time-pad/"
readme = "README.md"
edition = "2018"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["one-time-pad", "hyperlink", "encryption", "cli", "terminal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10"}
tokio = { version = "0.2", features = ["full"] }
error-chain = "0.12.2"
