[package]
name = "hyperlink-one-time-pad"
version = "0.3.0"
authors = ["772"]
license-file = "LICENSE"
description = "CLI tool that doesn't require you to save huge files for one-time-pad encryptions by using hyperlinks."
repository = "https://github.com/772/hyperlink-one-time-pad/"
readme = "README.md"
edition = "2024"
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["one-time-pad", "hyperlink", "encryption", "cli", "terminal"]

[dependencies]
reqwest = { version = "0.12"}
tokio = { version = "1.45", features = ["full"] }
error-chain = "0.12"
